Teste atualização pelo Git Gui
Signed-off-by: sauloleal <saulo.leal@ifbaiano.edu.br>

--- a/webroot/css/cake.generic.css
+++ b/webroot/css/cake.generic.css
@@ -6,7 +6,7 @@
 
 /** General Style Info **/
 body {
-	background: #003d4c;
+	background: #003d4cHH;
 	color: #fff;
 	font-family:'lucida grande',verdana,helvetica,arial,sans-serif;
 	font-size:70%;
